--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
     <div>
       <button class="button1">Click Me!</button>
     </div>
-    <div class="demo"></div>
+    <div class="demo">
+      <div class="main"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script2.js"></script>
   </body>
